--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <a href="index.html" class="logo"><img src="./images/Drift Icon.png" alt="logo"></a>
 
         <!--Linking Pages-->
-            
+            <h1>
+              jeffs site
+            </h1>
         <ul>
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="fastlane.html">Fastlane</a></li>
