--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TSE Workshop  </title>
     <link rel="stylesheet" href="style.css">
-
+    <title>Hi this is a change  </title>
     
     <script src="./main.js"></script> 
   
