--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@ console.log("PB");
 
   <!--=================GA4========================-->
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-K12FS66G5Q"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YHB85Z3SFX"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-K12FS66G5Q');
+  gtag('config', 'G-YHB85Z3SFX');
 </script>
 
 
